--- a/insights.html
+++ b/insights.html
@@ -42,8 +42,7 @@
                 <div class="menu services d-flex" data-toggle="services-menu">
                     <div class="col-12 lightgray-bg menu-nav-left">
                         <div class="wrapper d-flex flex-column align-items-center px-5">
-                            <a href="./services-tax.html" class="primary hover-cc sub-act mt-3"
-                                data-toggle="audit-menu">Audit
+                            <a href="./audit.html" class="primary hover-cc sub-act mt-3" data-toggle="audit-menu">Audit
                                 Xidmətləri</a>
                             <a href="./services-tax.html" class="primary hover-cc sub-act" data-toggle="tax-menu">Vergi
                                 Xidmətləri</a>
@@ -66,14 +65,14 @@
                 <div class="menu industries d-flex" data-toggle="industries-menu">
                     <div class="col-12 lightgray-bg menu-nav-left">
                         <div class="wrapper d-flex flex-column align-items-center px-5">
-                            <a href="#" class="primary hover-cc mt-3">Təhsil</a>
-                            <a href="#" class="primary hover-cc">Hotel və Turizm</a>
-                            <a href="#" class="primary hover-cc">İstehsalat sahəsi</a>
-                            <a href="#" class="primary hover-cc">Maliyyə qurumları</a>
-                            <a href="#" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
-                            <a href="#" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
-                            <a href="#" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-                            <a href="./industries-sub-page.html" class="primary hover-cc">Xəstəxanalar və
+                            <a href="fields.html" class="primary hover-cc mt-3">Təhsil</a>
+                            <a href="fields.html" class="primary hover-cc">Hotel və Turizm</a>
+                            <a href="fields.html" class="primary hover-cc">İstehsalat sahəsi</a>
+                            <a href="fields.html" class="primary hover-cc">Maliyyə qurumları</a>
+                            <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
+                            <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
+                            <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
+                            <a href="fields.html" class="primary hover-cc">Xəstəxanalar və
                                 hospitallar</a>
                         </div>
                     </div>
@@ -130,7 +129,7 @@
                                 <div class="menu services d-flex" data-toggle="services-menu">
                                     <div class="col-3 lightgray-bg menu-nav-left">
                                         <div class="wrapper d-flex flex-column align-items-end px-5">
-                                            <a href="./services-tax.html" class="primary hover-cc sub-act mt-3"
+                                            <a href="./audit.html" class="primary hover-cc sub-act mt-3"
                                                 data-toggle="audit-menu">Audit
                                                 Xidmətləri</a>
                                             <a href="./services-tax.html" class="primary hover-cc sub-act"
@@ -149,14 +148,14 @@
                                         <div class="col-7">
                                             <div class="wrapper d-flex flex-column align-items-start px-5 ms-5">
                                                 <p class="title mt-1">Audit xidmətləri</p>
-                                                <a href="./services-tax-3.html" class="primary hover-cc">Vergi
+                                                <a href="./audit-1.html" class="primary hover-cc">Vergi
                                                     hesabatlarının auditi</a>
-                                                <a href="./services-tax-1.html" class="primary hover-cc">Maliyyə
+                                                <a href="./audit-2.html" class="primary hover-cc">Maliyyə
                                                     hesabatlarının auditi</a>
-                                                <a href="./services-tax-4.html" class="primary hover-cc">Əmlakın
+                                                <a href="./audit-3.html" class="primary hover-cc">Əmlakın
                                                     qiymətləndirilməsinin
                                                     auditi</a>
-                                                <a href="./services-tax-2.html" class="primary hover-cc">Nizamnamə
+                                                <a href="./audit-4.html" class="primary hover-cc">Nizamnamə
                                                     kapitalının
                                                     formalaşdırılmasın auditi</a>
                                             </div>
@@ -281,14 +280,14 @@
                                 <div class="menu industries d-flex" data-toggle="services-menu">
                                     <div class="col-3 lightgray-bg menu-nav-left">
                                         <div class="wrapper d-flex flex-column align-items-end px-5">
-                                            <a href="#" class="primary hover-cc mt-3">Təhsil</a>
-                                            <a href="#" class="primary hover-cc">Hotel və Turizm</a>
-                                            <a href="#" class="primary hover-cc">İstehsalat sahəsi</a>
-                                            <a href="#" class="primary hover-cc">Maliyyə qurumları</a>
-                                            <a href="#" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
-                                            <a href="#" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
-                                            <a href="#" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-                                            <a href="./industries-sub-page.html" class="primary hover-cc">Xəstəxanalar
+                                            <a href="fields.html" class="primary hover-cc mt-3">Təhsil</a>
+                                            <a href="fields.html" class="primary hover-cc">Hotel və Turizm</a>
+                                            <a href="fields.html" class="primary hover-cc">İstehsalat sahəsi</a>
+                                            <a href="fields.html" class="primary hover-cc">Maliyyə qurumları</a>
+                                            <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
+                                            <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
+                                            <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
+                                            <a href="fields.html" class="primary hover-cc">Xəstəxanalar
                                                 və hospitallar</a>
                                         </div>
                                     </div>
@@ -539,11 +538,11 @@
         <div class="container">
             <div class="row px-0 mx-0">
                 <div class="col-12 px-0 pos-rel">
-                    <h2 class="fs-1-9 mt-60">Featured topics</h2>
+                    <h2 class="fs-1-9 mt-60 ">Featured topics</h2>
 
-                    <div class="swiper article-swiper">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
+                    <div class="swiper mt-5">
+                        <div class="swiper-wrapper row">
+                            <div class="col-lg-4">
                                 <div class="main-card">
                                     <div class="image-wrapper">
                                         <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
@@ -564,7 +563,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide">
+                            <div class="col-lg-4">
                                 <div class="main-card">
                                     <div class="image-wrapper">
                                         <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
@@ -585,7 +584,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide">
+                            <div class="col-lg-4">
                                 <div class="main-card">
                                     <div class="image-wrapper">
                                         <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
@@ -606,36 +605,17 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide">
-                                <div class="main-card">
-                                    <div class="image-wrapper">
-                                        <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
-                                    </div>
-                                    <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">BUSINESS RESILENCE</div>
-                                        <a href="#">
-                                            <p class="fs-2 primary my-4 fw-600">
-                                                Returning your business
-                                            </p>
-                                        </a>
 
-                                        <br />
-                                        <p class="card-info mt-2">
-                                            Lorem ipsum dolor sit amet consectetur, adipisicing
-                                            elit. Quis, temporibus?
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
 
                         </div>
                     </div>
 
                     <h2 class="fs-1-9">Latest articles</h2>
 
-                    <div class="swiper article-swiper">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
+
+                    <div class="swiper mt-5">
+                        <div class="swiper-wrapper row">
+                            <div class="col-lg-4">
                                 <div class="main-card">
                                     <div class="image-wrapper">
                                         <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
@@ -656,7 +636,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide">
+                            <div class="col-lg-4">
                                 <div class="main-card">
                                     <div class="image-wrapper">
                                         <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
@@ -677,7 +657,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide">
+                            <div class="col-lg-4">
                                 <div class="main-card">
                                     <div class="image-wrapper">
                                         <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
@@ -698,30 +678,12 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide">
-                                <div class="main-card">
-                                    <div class="image-wrapper">
-                                        <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
-                                    </div>
-                                    <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">BUSINESS RESILENCE</div>
-                                        <a href="#">
-                                            <p class="fs-2 primary my-4 fw-600">
-                                                Returning your business
-                                            </p>
-                                        </a>
 
-                                        <br />
-                                        <p class="card-info mt-2">
-                                            Lorem ipsum dolor sit amet consectetur, adipisicing
-                                            elit. Quis, temporibus?
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
 
                         </div>
                     </div>
+
+
                 </div>
 
 
