--- a/services-accountment-1.html
+++ b/services-accountment-1.html
@@ -38,7 +38,7 @@
         <div class="menu services d-flex" data-toggle="services-menu">
           <div class="col-12 lightgray-bg menu-nav-left">
             <div class="wrapper d-flex flex-column align-items-center px-5">
-              <a href="./services-tax.html" class="primary hover-cc sub-act mt-3" data-toggle="audit-menu">Audit
+              <a href="./audit.html" class="primary hover-cc sub-act mt-3" data-toggle="audit-menu">Audit
                 Xidmətləri</a>
               <a href="./services-tax.html" class="primary hover-cc sub-act" data-toggle="tax-menu">Vergi Xidmətləri</a>
               <a href="./services-advisory.html" class="primary hover-cc sub-act" data-toggle="advisory-menu">Məsləhət
@@ -58,14 +58,14 @@
         <div class="menu industries d-flex" data-toggle="industries-menu">
           <div class="col-12 lightgray-bg menu-nav-left">
             <div class="wrapper d-flex flex-column align-items-center px-5">
-              <a href="#" class="primary hover-cc mt-3">Təhsil</a>
-              <a href="#" class="primary hover-cc">Hotel və Turizm</a>
-              <a href="#" class="primary hover-cc">İstehsalat sahəsi</a>
-              <a href="#" class="primary hover-cc">Maliyyə qurumları</a>
-              <a href="#" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
-              <a href="#" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
-              <a href="#" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-              <a href="./industries-sub-page.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
+              <a href="fields.html" class="primary hover-cc mt-3">Təhsil</a>
+              <a href="fields.html" class="primary hover-cc">Hotel və Turizm</a>
+              <a href="fields.html" class="primary hover-cc">İstehsalat sahəsi</a>
+              <a href="fields.html" class="primary hover-cc">Maliyyə qurumları</a>
+              <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
+              <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
+              <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
+              <a href="fields.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
             </div>
           </div>
         </div>
@@ -121,7 +121,7 @@
                 <div class="menu services d-flex" data-toggle="services-menu">
                   <div class="col-3 lightgray-bg menu-nav-left">
                     <div class="wrapper d-flex flex-column align-items-end px-5">
-                      <a href="./services-tax.html" class="primary hover-cc sub-act mt-3" data-toggle="audit-menu">Audit
+                      <a href="./audit.html" class="primary hover-cc sub-act mt-3" data-toggle="audit-menu">Audit
                         Xidmətləri</a>
                       <a href="./services-tax.html" class="primary hover-cc sub-act" data-toggle="tax-menu">Vergi
                         Xidmətləri</a>
@@ -138,11 +138,11 @@
                     <div class="col-7">
                       <div class="wrapper d-flex flex-column align-items-start px-5 ms-5">
                         <p class="title mt-1">Audit xidmətləri</p>
-                        <a href="./services-tax-3.html" class="primary hover-cc">Vergi hesabatlarının auditi</a>
-                        <a href="./services-tax-1.html" class="primary hover-cc">Maliyyə hesabatlarının auditi</a>
-                        <a href="./services-tax-4.html" class="primary hover-cc">Əmlakın qiymətləndirilməsinin
+                        <a href="./audit-1.html" class="primary hover-cc">Vergi hesabatlarının auditi</a>
+                        <a href="./audit-2.html" class="primary hover-cc">Maliyyə hesabatlarının auditi</a>
+                        <a href="./audit-3.html" class="primary hover-cc">Əmlakın qiymətləndirilməsinin
                           auditi</a>
-                        <a href="./services-tax-2.html" class="primary hover-cc">Nizamnamə kapitalının
+                        <a href="./audit-4.html" class="primary hover-cc">Nizamnamə kapitalının
                           formalaşdırılmasın auditi</a>
                       </div>
                     </div>
@@ -256,14 +256,14 @@
                 <div class="menu industries d-flex" data-toggle="services-menu">
                   <div class="col-3 lightgray-bg menu-nav-left">
                     <div class="wrapper d-flex flex-column align-items-end px-5">
-                      <a href="#" class="primary hover-cc mt-3">Təhsil</a>
-                      <a href="#" class="primary hover-cc">Hotel və Turizm</a>
-                      <a href="#" class="primary hover-cc">İstehsalat sahəsi</a>
-                      <a href="#" class="primary hover-cc">Maliyyə qurumları</a>
-                      <a href="#" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
-                      <a href="#" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
-                      <a href="#" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-                      <a href="./industries-sub-page.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
+                      <a href="fields.html" class="primary hover-cc mt-3">Təhsil</a>
+                      <a href="fields.html" class="primary hover-cc">Hotel və Turizm</a>
+                      <a href="fields.html" class="primary hover-cc">İstehsalat sahəsi</a>
+                      <a href="fields.html" class="primary hover-cc">Maliyyə qurumları</a>
+                      <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
+                      <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
+                      <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
+                      <a href="fields.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
                     </div>
                   </div>
 
@@ -480,13 +480,13 @@
                 <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
               </div>
               <div class="nav-drop-menu d-flex flex-column my-3">
-                <a href="./services-tax-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi hesabatlarının
+                <a href="./audit-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi hesabatlarının
                   auditi</a>
-                <a href="./services-tax-2.html" class="primary hover-cc fs-1-7 fw-600 my-3">Maliyyə hesabatlarının
+                <a href="./audit-2.html" class="primary hover-cc fs-1-7 fw-600 my-3">Maliyyə hesabatlarının
                   auditi</a>
-                <a href="./services-tax-3.html" class="primary hover-cc fs-1-7 fw-600 my-3">Əmlakın
+                <a href="./audit-3.html" class="primary hover-cc fs-1-7 fw-600 my-3">Əmlakın
                   qiymətləndirilməsinin auditi</a>
-                <a href="./services-tax-4.html" class="primary hover-cc fs-1-7 fw-600 my-3">Nizamnamə kapitalının
+                <a href="./audit-4.html" class="primary hover-cc fs-1-7 fw-600 my-3">Nizamnamə kapitalının
                   formalaşdırılmasın auditi</a>
               </div>
 
